--- a/soft806activity/Web.config
+++ b/soft806activity/Web.config
@@ -5,9 +5,15 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=ANMO129-0918528\MSSQLSERVER01;Initial Catalog=thecookscravings;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
+    <authentication mode="Forms">
+      <forms defaultUrl="~/Default.aspx" loginUrl="~/Login.aspx" slidingExpiration="true" timeout="2880"></forms>
+    </authentication>
   </system.web>
   <system.codedom>
     <compilers>
