Fix login error.

--- a/soft806activity/Web.config
+++ b/soft806activity/Web.config
@@ -5,8 +5,11 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=ANMO129-0918528\MSSQLSERVER01;Initial Catalog=thecookscravings;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=ANMO129-0918528\MSSQLSERVER01;Initial Catalog=soft806activity;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
